--- a/src/shared/_material-ui-colors.scss
+++ b/src/shared/_material-ui-colors.scss
@@ -33,6 +33,7 @@ $material-color-deep-orange-a100: #ff9e80;
 $material-color-deep-orange-a200: #ff6e40;
 $material-color-orange-a400: #ff9100;
 
+$material-color-deep-orange-a400: #ff3d00;
 $material-color-deep-orange-a900: #c02400;
 $hsl-material-color-deep-orange-a900: hsl(11, 100%, 38%);
 
