--- a/src/popover.scss
+++ b/src/popover.scss
@@ -176,3 +176,17 @@
     }
   }
 }
+
+// # Remove inline headings from nlk-style embeds from popover
+// // Organize a section that is both a hover and an EMBED.
+// .hover-popover .markdown-embed[data-type="heading"] .inline-title
+// .hover-popover .inline-title, .inline-embed .inline-title
+.hover-popover {
+  .markdown-embed {
+    &:is([data-type="heading"], [alt*="nlk"]) {
+      .inline-embed .inline-title {
+        display: none;
+      }
+    }
+  }
+}
