Add color to footnotes and to quote block
Forgot to add this to the footnote ref

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -26,5 +26,9 @@
 @import "./sliding-window/index.scss";
 
 @import "./migration/index.scss"; // here's where all the basic uses are;
+
+// start to put core plugins into core.
+@import "./core";
+
 // # backrounds
 // @import "./migration/index.scss"; // migration of old scss be careful of using index
