Unify name of splits using participant circumstance style to keep them grouped in the file explorer.

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -11,9 +11,9 @@
 @import "./headers";
 @import "./embedded-headers.scss";
 
-@import "./right-split-views.scss/index.scss";
-@import "./left-split-views.scss/index.scss";
-@import "./center-split-views.scss/index.scss";
+@import "./views--right-split.scss/index.scss";
+@import "./views--left-split.scss/index.scss";
+@import "./views--right-split.scss/index.scss";
 
 @import "./table.scss";
 @import "./popover.scss";
