Re-add center split and fix accidentaly duplication of rightsplit.

--- a/src/onering.scss
+++ b/src/onering.scss
@@ -11,7 +11,7 @@
 @import "./headers";
 @import "./embedded-headers.scss";
 
-@import "./views--right-split.scss/index.scss";
+@import "./views--center-split.scss/index.scss";
 @import "./views--left-split.scss/index.scss";
 @import "./views--right-split.scss/index.scss";
 
