--- a/src/shared/_marionic-colors.scss
+++ b/src/shared/_marionic-colors.scss
@@ -20,6 +20,12 @@ $accentSecondary: raw-colors.$material-color-indigo-200;
 $bookSource: raw-colors.$material-color-indigo-900;
 $borderColor: raw-colors.$material-color-deep-orange;
 
+// # List items
+$altListItemColor: MAT_COLORS.$material-color-deep-purple-200;
+$offListItemColor: MAT_COLORS.$material-color-purple-100;
+
+// # LINKS
+$altLinkColor: MAT_COLORS.$material-color-light-blue-a400;
 // #C6BAAD
 $unresolvedLinkColor: #c6baad;
 
