--- a/src/shared/_material-ui-colors.scss
+++ b/src/shared/_material-ui-colors.scss
@@ -64,11 +64,14 @@ $material-color-pink-900: #880e4f;
 $material-color-pink: #e91e63;
 $material-color-pink-a100: #ff80ab;
 
+$material-color-purple-100: #e1bee7;
+$material-color-purple-200: #ce93d8;
 $material-color-purple-700: #7b1fa2;
 $material-color-purple-800: #6a1b9a;
 $material-color-purple-900: #4a148c;
 
 $material-color-deep-purple-200: #b39ddb;
+
 // $material-color-deep-purple-a400: #651fff;  // terrible color on dark mode
 
 $material-color-red-100: #ffcdd2;
