--- a/src/views--right-split.scss/right-split.scss
+++ b/src/views--right-split.scss/right-split.scss
@@ -2,15 +2,12 @@
 // # SHARED between splits.
 .workspace-split:is(.mod-left-split, .mod-right-split) {
   .view-content {
-    background-image: var(--mm-image);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    @extend %fixed-bg;
   }
 }
 
 // # RIGHT SPLIT
-.workspace.is-right-sidedock-open {
+.workspace {
   .workspace-split.mod-right-split {
     // * right-split-vertical-sidedock-border.png
     &.mod-horizontal {
@@ -34,7 +31,6 @@
           .workspace-leaf-content {
             .view-content {
               > :is(div:nth-of-type(2), div:nth-of-type(1)) {
-                // background: rgba(0, 0, 0, 0.8);
                 background: shared.$shade;
               }
             }
