Add highlight to output titled folders on the border, specifically useful to differentiate between folder siblings that share the same color scheme.

--- a/src/multi-colored-folders.scss
+++ b/src/multi-colored-folders.scss
@@ -285,3 +285,11 @@ B-source: https://raw.githubusercontent.com/obsidian-community/obsidian-hub/main
     background: var(--theme-color-translucent-2);
   }
 }
+
+// # highlight every nav folder that has a output in it.
+
+.app-container {
+  .nav-folder-title[data-path*="output"] {
+    border: 1px solid shared.$callout;
+  }
+}
