--- a/src/plugin-stylings/pixel-banner.scss
+++ b/src/plugin-stylings/pixel-banner.scss
@@ -1,13 +1,10 @@
 // # PIXEL BANNER
 
-.hover-popover,
+.hover-popover.popover,
 .popover {
   .markdown-embed {
     .pixel-banner-image + .markdown-preview-sizer.markdown-preview-section {
       margin-top: 0 !important;
-    }
-    .pixel-banner-image {
-      display: none !important;
     }
   }
 }
